# NewCoolyBus

./: Documentation_setup_project .md  docker_help.md
colibus-main/src/: documentation.md  setup_project.sh
colibus-main/src/Doc/: 0-Sommaire_Config.md  Doc_calibration.md  Doc_joystick .md  Doc_my_controllers .md  Doc_nav2_params.md  Doc_twist_mux.md  Doc_vehicle_info.md
colibus-main/src/colibus_simulator/: CMakeLists.txt  package.xml  setup.cfg  setup.py
colibus-main/src/colibus_simulator/config/: calibration.yaml
colibus-main/src/colibus_simulator/icars_msgs/msg/: CarId.msg  LogErr.msg
colibus-main/src/colibus_simulator/launch/: launch_robot.launch.py  launch_sim.launch.py  rsp.launch.py
colibus-main/src/colibus_simulator/launch/captor/: vehicle_simulator.launch.py
colibus-main/src/colibus_simulator/launch/old/: ekf_node.launch.py  gazebo.launch.py
colibus-main/src/colibus_simulator/nodes/Detection/: video_feed.py
colibus-main/src/colibus_simulator/nodes/Navigation/: Auto_Drive.py  ekf.py  ekf.yaml  speed_accel.py
colibus-main/src/colibus_simulator/nodes/test_sensors_and_msg/: camera_front.py  vehicle_node.py  vlp16.py
colibus-main/src/colibus_simulator/ros_zoe_msgs/msg/: Beep.msg  BlkLights.msg  CarInterfaceCommand.msg  CarInterfaceConditions.msg  CarInterfaceStatus.msg  CarStatus.msg  ClimaStatus.msg  ControlRefs.msg  Forces.msg  LCDText.msg  PID.msg  SpeedAccelData.msg  SpeedControlVars.msg  SteeringData.msg
colibus-main/src/colibus_simulator/ros_zoe_msgs/srv/: GetBlStatus.srv  GetControlMode.srv  GetRunMode.srv  SetControlMode.srv
colibus-main/src/colibus_simulator/urdf/: imu.xacro  ros2_control.xacro
colibus-main/src/colibus_simulator/urdf_old/: camera.xacro  gps.xacro  lidar.xacro
colibus-main/src/colibus_simulator/worlds/: example.world
